# netadmin

./: .coverage  .gitignore  ADR-001-选Netmiko非NAPALM.md  ADR-002-CLI框架选Click.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  config.yaml  demo.py  pyproject.toml  复测清单.md  复盘踩坑日志.md  用户手册.md  设计文档.md  需求文档.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
netadmin/: __init__.py  apply.py  backup.py  checker.py  cli.py  commands.py  config.py  connector.py  interface.py  learn.py  notifier.py  scanner.py  scheduler.py  vlan.py
netadmin/web/: app.py
netadmin/web/templates/: _health_cards.html  backups.html  base.html  dashboard.html  device.html  schedules.html
tests/: test_netadmin.py
