[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netadmin"
description = "华为/思科交换机统一管理工具 — Unified Huawei & Cisco Switch Manager"
version = "0.1.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "netmiko>=4.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "paramiko>=3.0",
]
optional-dependencies = {dev = ["pytest>=7.0", "pytest-click>=1.0", "pre-commit>=3.0"]}

[project.urls]
Source = "https://github.com/yhan1203/netadmin"

[project.scripts]
netadmin = "netadmin.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["netadmin*"]